<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_select"/>

    <RadioGroup android:id="@+id/radio_group_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/little_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/little_grid"/>
        <RadioButton android:id="@+id/small_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_grid"/>
        <RadioButton android:id="@+id/middle_grid"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/middle_grid"/>
        <RadioButton android:id="@+id/big_grid"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/big_grid"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/investment_amount"/>
        <EditText android:id="@+id/investment_amount"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.30"
                  android:gravity="center"
                  android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_price"/>
        <EditText android:id="@+id/initial_price"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.30"
                  android:gravity="center"
                  android:inputType="number"/>
    </LinearLayout>

    <Button android:id="@+id/gain_grid_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_strategy_table"/>

    <TextView android:id="@+id/grid_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
