<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compound_interest_principal"/>
        <EditText android:id="@+id/compound_interest_principal"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.30"
                  android:gravity="center"
                  android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/principal_unit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compound_interest_year"/>
        <EditText android:id="@+id/compound_interest_year"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.30"
                  android:gravity="center"
                  android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_unit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compound_interest_rate"/>
        <EditText android:id="@+id/compound_interest_rate"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.30"
                  android:gravity="center"
                  android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_unit"/>
    </LinearLayout>

    <Button android:id="@+id/compound_interest_compute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compound_interest_compute"/>

    <TextView android:id="@+id/compound_interest_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

</LinearLayout>
